Closed
Bug 224587
Opened 22 years ago
Closed 22 years ago
Biff shouldn't pop up alerts, except for severe errors e.g. server ALERT
Categories
(MailNews Core :: Networking: IMAP, defect)
MailNews Core
Networking: IMAP
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: neil, Assigned: Bienvenu)
Details
Attachments
(1 file)
|
973 bytes,
patch
|
Bienvenu
:
review+
Henry.Jia
:
superreview+
|
Details | Diff | Splinter Review |
Steps to reproduce problem:
1. Enable background biff
2. Have some sort of transient server error
Expected results: biff ignores server error
Actual results: server error gets alerted
| Reporter | ||
Comment 1•22 years ago
|
||
Note that this does not affect an ALERT which uses FEAlert() instead.
| Assignee | ||
Comment 2•22 years ago
|
||
Comment on attachment 134705 [details] [diff] [review]
Patch to FEAlertFromServer
this seems OK. It might cause problems if some operations other than biff are
running without an nsMsgWindow but they should probably be fixed to use an
nsMsgwindow.
Attachment #134705 -
Flags: review+
| Reporter | ||
Updated•22 years ago
|
Attachment #134705 -
Flags: superreview?(Henry.Jia)
Comment on attachment 134705 [details] [diff] [review]
Patch to FEAlertFromServer
Seems good. sr=Henry
Attachment #134705 -
Flags: superreview?(Henry.Jia) → superreview+
| Reporter | ||
Comment 4•22 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•