Bug 224587 Biff shouldn't alert for transient IMAP server errors r=bienvenu sr=Henry.Jia